add find author
